# bubblenaut-rs

./: Cargo.toml
src/: camera.rs  camera_uniform.rs  constants.rs  engine.rs  image.rs  input_controller.rs  lib.rs  main.rs  shapes.rs  texture.rs  vertex.rs
src/shaders/: textured.wgsl
