[package]
name = "ultradium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["png", "jpeg"], default-features = false }
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.0"
winit = "0.30.9"

[[bin]]
name = "engine"
path = "src/bin/engine/main.rs"
